2.19.0 (2024-10-15)
-----------------------------
* RestAPI Module
  - Read "brake wear" data from LMU Rest API.

* [New]Brake wear Widget
  - Show brake wear data in percentage or millimeter thickness.
    Important note:
    Brake wear data is currently only available on LMU.
    RF2 currently doesn't provide brake wear data.
    Depends on vehicle, brake may or may not have noticeable wear.
    Additional Note:
    Brake maximum thickness (for percentage wear calculation) is retrieved at the moment
    when car leaves garage or has brake repaired or changed.
    Reloading a preset or restarting APP in the middle of a running stint could result
    wrong maximum thickness and percentage wear calculation, which should be avoided.
  - Show total brake wear difference of previous lap.
  - Show live brake wear difference of current lap that constantly updated.
  - Show estimated brake lifespan in laps.
  - Show estimated brake lifespan in minutes.
  - Customizable wear warning threshold.

* Misc
  - Updated User Guide info for Brake wear Widget.

2.18.3 (2024-10-08)
-----------------------------
* RestAPI Module
  - Read "body aero" and "suspension damage" data from LMU Rest API.

* [Reworked]Damage Widget
  - Add "show_last_impact_cone" option that shows cone indicator towards last known impact position.
    This option can be useful to determine whether there was a collision, even if car was not damaged.
    Cone indicator display duration can be customized by "last_impact_cone_duration" option.
    Default display duration for last known impact is 15 seconds.
    Cone angle (size) can be customized by "last_impact_cone_angle" option.
  - Add "show_aero_integrity_if_available" option that shows body aero integrity reading
    (only available for LMU) instead of bodywork integrity, which better reflects
    severity of bodywork damage that would affect performance.
  - Add suspension damage color indication (only available for LMU) for each wheel, which