@@ -9,11 +9,20 @@
     Brake wear data is currently only available on LMU.
     RF2 currently doesn't provide brake wear data.
     Depends on vehicle, brake may or may not have noticeable wear.
-    Additional Note:
+    Additional note:
     Brake maximum thickness (for percentage wear calculation) is retrieved at the moment
     when car leaves garage or has brake repaired or changed.
     Reloading a preset or restarting APP in the middle of a running stint could result
     wrong maximum thickness and percentage wear calculation, which should be avoided.
+    "Brake failure thickness" note:
+    This option manually sets millimeter thickness threshold at brake failure, which
+    affects brake thickness readings and overall brake wear calculation.
+    For example, if brake thickness is 40mm, and brake failure thickness is 25mm,
+    then effective thickness is 40 - 25 = 15mm.
+    Note, brake failure thickness threshold data is not available from game API,
+    it may require testing to find out, and may vary from vehicle to vehicle.
+    Thickness threshold value should not exceed brake maximum thickness, otherwise
+    brake wear readings will not be displayed correctly.
   - Show total brake wear difference of previous lap.
   - Show live brake wear difference of current lap that constantly updated.
   - Show estimated brake lifespan in laps.
